Fixed a bug with map container being too wide, causing horizontal scroll

--- a/static/css/clean.css
+++ b/static/css/clean.css
@@ -82,9 +82,6 @@ section.overview .sub-block {
 .overview--contact {
 	width: 200px;
 }
-.overview--locate {
-	width: 500px;
-}
 
 @media (min-width: 768px) {
 	img.narrow-map { display: none; }
